logs/log-error.log
[2018-03-15 22:51:56.227] [ERROR] errorLog - === CAUGHT EXCEPTION === /Users/apple/dev/dev-myz/wepoem_m/routes/pages.js:1
(function (exports, require, module, __filename, __dirname) { <<<<<<< HEAD
                                                              ^^
SyntaxError: Unexpected token <<
    at Object.exports.runInThisContext (vm.js:76:16)
    at Module._compile (module.js:542:28)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.require (module.js:497:17)
    at require (internal/module.js:20:19)
    at Object.<anonymous> (/Users/apple/dev/dev-myz/wepoem_m/app.js:40:14)
    at Module._compile (module.js:570:32)
